--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
         "@testing-library/react": "^9.4.0",
         "@testing-library/user-event": "^7.2.1",
         "axios": "^0.19.0",
+        "file-saver": "^2.0.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.3.0",
         "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "xlsx": "^0.15.4"
     },
     "scripts": {
         "start": "SET PORT=4000 && react-scripts start",
